2.4.3 () -

- TW-1279 Make default.* not apply to recurring tasks.
- TW-1287 Make default.* not apply to synced tasks.
- TW-1578 Bash tab completion problems on first run
          (thanks to Renato Alves and Ptolemarch).
- TW-1580 "modified" attribute no longer updated (thanks to David Patrick).
- TW-1581 Tasks with dependencies show wrong urgency values for the first
  report run after a task in the dependency chain is completed/deleted (thanks
  to Ulf Eliasson).
- TW-1583 Invalid ID displayed for first report after done/delete (thanks to
  Ulf Eliasson).
- TW-1584 attr.{isnt,not} use partial matching.
- TW-1587 Fix and improve example on-exit hook, adjust to new hooks API
  (thanks to Jochen Sprickerhof).
- TW-1588 Most Export scripts cannot deal with new export format (thanks to
  Scott Carter).
- Setting 'bulk' to zero is interpreted as infinity, which means there is no
  amount of changes that is considered dangerous (thanks to Tomas Babej).
- Disable hooks in bash completion script.  Hooks were previously able to
  abort processing or output interfering data, breaking completion.
- Fix "task add due:tomorrow+3days" failing to work without spaces.

------ current release ---------------------------

2.4.2 (2015-03-15) b9dc0813d9a8922b4cef9595033f133f9fbabf44

- TW-41   Tasks in subprojects are not counted in project completion (thanks
          to Renato Alves).
- TW-1450 Projects command should trigger running garbage collector (thanks to
          Tomas Babej).
- TW-1535 move default listing-break from list to ls (thanks to David Patrick).
- TW-1545 cc1plus: error: unrecognized command line option '-std=c++11' (thanks
          to Petteri).
- TW-1546 column type due.remaining breaks colors on due tasks (thanks to
          Renato Alves).
- TW-1547 Recur column is always shown even if no recurring task is displayed
          (thanks to Renato Alves).
- TW-1549 task annotate hangs with specific text pattern (thanks to Alexandre
          de Verteuil).