@@ -12,6 +12,8 @@ New configuration options in taskwarrior 2.4.3
 
   - Setting 'bulk' to zero is interpreted as infinity, which means there is no
     amount of changes that is considered dangerous.
+  - The 'urgency.user.keyword.<keyword>.coefficient' setting allows tasks with
+    specific words in the description to have adjusted urgency.
 
 Newly deprecated features in taskwarrior 2.4.3
 
@@ -19,7 +21,9 @@ Newly deprecated features in taskwarrior 2.4.3
 
 Removed features in 2.4.3
 
-  -
+  - The 'priority.long' and 'priority.short' column formats are no longer
+    supported.
+  - The 'default.priority' setting is now 'uda.priority.default'.
 
 Known Issues
 
