@@ -1,5 +1,6 @@
 2.4.3 () -
 
+- TW-70 urgency.user.keyword.<keyword>.coefficient=...
 - TW-1279 Make default.* not apply to recurring tasks.
 - TW-1287 Make default.* not apply to synced tasks.
 - TW-1578 Bash tab completion problems on first run
